--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@ pflow --version
             If your use Bash, you can use the completion feature we provide :
             As root user, execute this instruction :
 <pre class="prettyprint lang-bsh linenums">
-ln -sf pflow_install_dir/bin/pflow_autocomplete.bash  /etc/bash_completion.d/pflow
+ln -sf pflow_install_dir/bin/pflow_autocomplete.bash /etc/bash_completion.d/pflow
+</pre>
+            As your user, execute this instruction to reload Bash completion :
+<pre class="prettyprint lang-bsh linenums">
+source ~/.bashrc
 </pre>
             You can then enjoy the autocompletion of pflow commands :)
           </p>
